// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/params has a default state 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces OBSERVATION_SELECT 1`] = `
Object {
  "observation": Object {
    "isActive": true,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces OBSERVATION_UPDATED 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": "foo",
  },
  "reset": Object {
    "isDisabled": false,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces OBSERVATIONS_REQUEST 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": true,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces OBSERVATIONS_REQUEST_ERROR 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces OBSERVATIONS_REQUEST_SUCCESS 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": false,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces OBSERVATIONS_UPDATED 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces RESET 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces TYPE_SELECT 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": true,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;

exports[`reducers/params reduces TYPE_UPDATED 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": false,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": "foo",
  },
}
`;

exports[`reducers/params reduces nothing 1`] = `
Object {
  "observation": Object {
    "isActive": false,
    "isDisabled": true,
    "isLoading": false,
    "items": Array [],
    "selectedItem": null,
  },
  "reset": Object {
    "isDisabled": true,
  },
  "type": Object {
    "isActive": false,
    "items": Array [
      "event",
      "measurement",
    ],
    "selectedItem": null,
  },
}
`;
